<resources>
    <string name="app_name">apptravel002</string>
    <string name="nav_header_title">Amigos de la Montaña</string>
    <string name="nav_header_subtitle">amigosmontanawo.eboe62.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main_adm">MainActivity_adm</string>
    <string name="title_activity_main_col">MainActivity_col</string>

    <!-- a_add_eve -->
    <string name="creacion_de_evento">Creacion de evento</string>
    <string name="titulo">Titulo</string>
    <string name="fecha_ida">Fecha ida</string>
    <string name="fecha_vuelta">Fecha vuelta</string>
    <string name="nivel">Nivel</string>
    <string name="fecha_salida">Fecha salida</string>
    <string name="fecha_llegada">Fecha llegada</string>
    <string name="distancia_ida">Distancia ida</string>
    <string name="distancia_vuelta">Distancia vuelta</string>
    <string name="salida_coordenadas">Salida coordenadas</string>
    <string name="llegada_coordenadas">Llegada coordenadas</string>
    <string name="llegada_vuelta">Llegada vuelta</string>
    <string name="precio">Precio</string>
    <string name="transporte">Transporte</string>
    <string name="creacion_de_actividades">Creacion de actividades</string>
    <string name="nombre_actividad">Nombre actividad</string>
    <string name="tipo">Tipo</string>
    <string name="fecha">Fecha</string>
    <string name="distancia">Distancia</string>
    <string name="desnivel">Desnivel</string>
    <string name="horas">Horas</string>
    <string name="wikiloc">Wikiloc</string>
    <string name="guardar">Guardar</string>
    <string name="quitar_de_evento">Quitar de evento</string>
    <string name="limpiar_campos">Limpiar campos</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="aniadir_otra">Añadir otra</string>

    <!-- pantalla c_05-->
    <string name="valiente">Valiente</string>
    <string name="preferencia">Preferencia</string>
    <string name="datos_emergencia">Datos emergencia</string>
    <string name="datos_filiacion">Datos filiacion</string>
    <string name="calidad">Calidad</string>

    <!-- pantalla v_01-->
    <string name="excurciones_de_un_dia">Excurciones de un dia</string>
    <string name="fin_de_semana">Fin de semana</string>
    <string name="aventuras_más_largas">Aventuras más largas</string>
    <string name="buscar_actividades">Buscar actividades</string>

    <!-- pantalla v_03-->
    <string name="inscritos">Inscritos</string>
    <string name="actividades">Actividades</string>
    <string name="volver">Volver</string>
    <string name="inscripcion">Inscripción</string>

    <!-- pantalla v_03_1 -->
    <string name="recomendaciones">Recomendaciones</string>
    <string name="pago_senial">Pago señal</string>
    <string name="pago_total">Pago total</string>

    <!-- pantalla modal v_03_2-->
    <string name="quieres_solicitar">¿Quieres solicitar una plaza de coche?</string>
    <string name="solicitar">Solicitar</string>
    <string name="renunciar">Renunciar</string>

    <!-- pantalla v_04 -->
    <string name="contrasenna_prs">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>

    <!-- pantalla v_04_1 y v_05_2
    pantalla ACV_usuario
    -->
    <string name="apodo_prs">Apodo</string>
    <string name="nombre_prs">Nombre</string>
    <string name="apellido1_prs">Primer apellido</string>
    <string name="apellido2_prs">Segundo apellido</string>
    <string name="contrasennaConfirmar_prs">Contraseña</string>
    <string name="recordarcontrasenna_prs">Recordar contraseña</string>
    <string name="actividadtipo_prs">Actividad preferente</string>
    <string name="documentotipo_prs">Tipo de documento</string>
    <string name="dni_prs">DNI</string>
    <string name="nacionalidad_prs">Nacionalidad</string>
    <string name="razonsocial_prs">Razón social</string>
    <string name="numerocta_prs">Número cuenta</string>
    <string name="movil_prs">Móvil</string>
    <string name="telefono_prs">Teléfono</string>
    <string name="web_prs">Web</string>
    <string name="email_prs">eMail</string>
    <string name="direccion_prs">Direccion</string>
    <string name="localidad_prs">Localidad</string>
    <string name="cpostal_prs">Código postal</string>
    <string name="pais_prs">País</string>
    <string name="segurocompannia_prs">Compañía de seguros</string>
    <string name="seguropoliza_prs">Número de póliza</string>
    <string name="fechacaducidadseguro_prs">Caducidad del seguro</string>
    <string name="fechaalta_prs">Fecha de alta</string>
    <string name="antiguedad_prs">Antiguedad</string>
    <string name="fechabaja_prs">Fecha de baja</string>
    <string name="preferencia_prs">Preferencia General</string>
    <string name="fiabilidadpre_prs">Preferencia: Fiabilidad</string>
    <string name="valoracionorgpre_prs">Preferencia: Colaboración</string>
    <string name="antiguedadpre_prs">Preferencia: Antigüedad</string>
    <string name="volumencomprapre_prs">Preferencia: Volumen</string>
    <string name="cochepre_prs">Preferencia: Coche</string>
    <string name="nrelacionespre_prs">Preferencia: Relaciones</string>
    <string name="nps01fecha_prs">Fecha NPS #1</string>
    <string name="nps01_prs">NPS #1</string>
    <string name="nps02fecha_prs">Fecha NPS #2</string>
    <string name="nps02_prs">NPS #2</string>
    <string name="nps03fecha_prs">Fecha NPS #3</string>
    <string name="nps03_prs">NPS #3</string>
    <string name="soy_valiente">Soy valiente</string>
    <string name="soy_colaborador">Soy colaborador</string>
    <string name="aceptacion_de_condiciones">Aceptacion de condiciones</string>
    <string name="aceptar">Aceptar</string>

    <!-- pantalla v_05? -->
    <!-- pantalla modal v_05_2-->
    <string name="adelante">Confirmar</string>

    <!-- v02_00_eve_Adapter -->
    <integer name="accion_a_v_03">0</integer>
    <integer name="accion_rellenar_formulario">1
    </integer><!-- esta accion rellena el formulario en a_add_eve -->

    <!-- pantalla v_06 -->
    <string name="gracias_por">Gracias por colaborar con nosotros.En breve resibirás un Email con la confirmacion de registro</string>
    <string name="activar_aviso">Activar aviso</string>
    <string name="buscar_mas_actividades">Buscar mas actividades</string>

    <!-- v03_00_act_Adapter -->
    <integer name="accion_a_web">0</integer>

    <!-- pantalla ACV_usuario
    <string name="apodo">Apodo</string>
    <string name="direccion">Direccion</string>
    <string name="localidad">Localidad</string>
    <string name="cpostal">Código postal</string>
    <string name="pais">País</string>
    <string name="seguro">Seguro</string>
    <string name="seguropoliza">Número póliza</string>
    <string name="fechacaducidadseguro">Caducidad del seguro</string>
-->

    <!-- tipos de usuarios -->
    <integer name="rol_no_iniciada">0</integer>
    <integer name="rol_valiente">1</integer>
    <integer name="rol_colaborador">2</integer>
    <integer name="rol_administrador">3</integer>
    <integer name="rol_transportecolectivo">4</integer>
    <integer name="rol_alojamiento">5</integer>
    <integer name="rol_empresas_trekking">6</integer>

    <!-- acciones para gestionar los fragmentos en attivities -->
    <integer name="accion_a_v04">-1</integer>
    <integer name="accion_a_v01">0</integer>

    <!-- estados de los eventos -->
    <integer name="confirmado">-1</integer>
    <integer name="pendiente">-1</integer>
    <integer name="realizado">0</integer>

    <!-- Configuracion acceso a Google maps -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDchp8aiML5Coi50fk6asG9nUF06Cmj69g</string>

    <!-- prueba con el tiempo -->
    <string name="weather">Clima</string>
    <string name="country_iso_code">Código ISO del País :</string>
    <string name="code">Código</string>
    <string name="city_name">Nombre de Ciudad :</string>
    <string name="name">Nombre</string>
    <string name="get">Obtener</string>
    <string name="tiempo">Tiempo</string>
    <string name="current">Actual :</string>
    <string name="se_siente_como">Se siente como :</string>
    <string name="minimum">Mínima :</string>
    <string name="maximum">Máxima :</string>
    <string name="presion">Presión :</string>
    <string name="humedad">Humedad :</string>
    <string name="velocidad">Velocidad :</string>
    <string name="dirección">Dirección :</string>
    <string name="nubes">Nubes :</string>
    <string name="visibilidad">Visibilidad :</string>
    <string name="Fields_cannot_be_empty">Los campos no pueden ser vacíos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="prefijosApellidos">
        <item>"de"</item>
        <item>"d"</item>
        <item>"del"</item>
        <item>"la"</item>
        <item>"l"</item>
        <item>"el"</item>
        <item>"de la"</item>
        <item>"de l"</item>
        <item>"de el"</item>
        <item>"i"</item>
        <item>"y"</item>
        <item>"un"</item>
        <item>"una"</item>
        <item>"uno"</item>
        <item>"en"</item>
        <item>"por"</item>
        <item>"von"</item>
        <item>"vom"</item>
        <item>"-"</item>
        <item>"'"</item>
    </string-array>

    <string-array name="documentoTipos_prs">
        <item>"DNI"</item>
        <item>"NIE"</item>
        <item>"NIF"</item>
        <item>"Pasaporte"</item>
    </string-array>

    <string-array name="actividadTipos_prs">
        <item>"Senderismo"</item>
        <item>"Alpinismo"</item>
        <item>"Escalada"</item>
        <item>"Ferrata"</item>
    </string-array>

    <!--
https://www.youtube.com/watch?v=JB3ETK5mh3c&ab_channel=CodinginFlow
-->
    <string-array name="ofertaPlazasLibres">
        <item>"VIAJO SOLO"</item>
        <item>"1 Plaza"</item>
        <item>"2 Plazas"</item>
        <item>"3 Plazas"</item>
        <item>"4 Plazas"</item>
        <item>"5 Plazas"</item>
        <item>"6 Plazas"</item>
    </string-array>

    <string-array name="restriccionesAlimentarias">
        <item>"Altramúz"</item>
        <item>"Apio"</item>
        <item>"Cacahuete"</item>
        <item>"Crustáceos"</item>
        <item>"Glúten"</item>
        <item>"Huevos"</item>
        <item>"Lácteos"</item>
        <item>"Moluscos"</item>
        <item>"Mostaza"</item>
        <item>"Pescado"</item>
        <item>"Sésamo"</item>
        <item>"Soja"</item>
        <item>"Sulfitos"</item>
        <item>"Vegano"</item>
        <item>"Vegetariano"</item>
    </string-array>

    <string-array name="contactoCargos_prs">
        <item>"RELACION:"</item>
        <item>"Pareja"</item>
        <item>"Amistad"</item>
        <item>"Familiar"</item>
        <item>"Trabajo"</item>
    </string-array>

    <string-array name="contactoCargos_sum">
        <item>"CARGO:"</item>
        <item>"Gerencia"</item>
        <item>"Reservas"</item>
        <item>"Facturación"</item>
    </string-array>

</resources>