<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

        <Spinner
            android:id="@+id/v05_2_spn_ContactoCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_prs"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoApellido1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido1_prs"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoApellido2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido2_prs"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoMovil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movil_prs"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_prs"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v05_2_etx_ContactoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_prs"
            android:inputType="phone" />

</LinearLayout>