<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.controller.modal.A_update_act_modal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:text="Actualizacion de la acticidad" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/conteneder_con_borde"
            android:orientation="vertical">


            <EditText
                android:id="@+id/a_update_act_modal_etx_nombre_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/a_update_act_modal_etx_actividadtipo_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/a_update_act_modal_etx_fecha_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/fecha" />

                <EditText
                    android:id="@+id/a_update_act_modal_etx_nivel_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/nivel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/a_update_act_modal_etx_distancia_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:hint="Distancia" />

                <EditText
                    android:id="@+id/a_update_act_modal_etx_desnivel_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:hint="@string/desnivel" />

                <EditText
                    android:id="@+id/a_update_act_modal_etx_horas_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/horas" />
            </LinearLayout>

            <EditText
                android:id="@+id/a_update_act_modal_etx_wikiloc_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/wikiloc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/a_update_act_modal_btn_limpiar_campos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/btn_formato_left"
                    android:text="@string/limpiar_campos" />
                <Button
                    android:id="@+id/a_update_act_modal_btn_guardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/btn_formato_right"
                    android:text="@string/guardar" />
            </LinearLayout>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/a_update_act_modal_btn_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_formato_left"
            android:text="@string/eliminar" />

        <Button
            android:id="@+id/a_update_act_modal_btn_quitar_de_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/btn_formato_right"
            android:text="@string/quitar_de_evento" />


    </LinearLayout>
</LinearLayout>