<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_para_persona"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.controller.V_01">

    <LinearLayout
        android:id="@+id/v01_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/v01_contenedor_blanco"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <RadioGroup
            android:id="@+id/v01_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/v01_rbt_excursiones_un_dia"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="50dp"
                android:checked="true"
                android:text="@string/excurciones_de_un_dia" />

            <RadioButton
                android:id="@+id/v01_rbt_fin_semana"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/fin_de_semana" />

            <RadioButton
                android:id="@+id/v01_rbt_aventuras_largas"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/aventuras_más_largas" />

        </RadioGroup>

        <Button
            android:id="@+id/v01_btn_buscar_actividades"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_formato_left_prs"
            android:text="@string/buscar_actividades" />
    </LinearLayout>

</LinearLayout>