<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.controller.modal.A_add_eve_edit_remove">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:text="Elige la opcion, por favor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_a_add_eve_edit_remove_modal_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_formato_left"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btn_a_add_eve_edit_remove_modal_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_formato_center"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btn_a_add_eve_edit_remove_modal_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_formato_right"
            android:text="@string/eliminar" />
    </LinearLayout>
</LinearLayout>