<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_para_persona"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.controller.V_04">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/v04_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/contenedor_blanco_radius4"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/v04_etx_email_prs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:hint="@string/email_prs"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/v04_etx_contrasenna_prs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:hint="@string/contrasenna_prs"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/v04_etx_contrasennaConfirmar_prs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:hint="@string/contrasennaConfirmar_prs"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="11dp"
                        android:textSize="18sp"
                        android:text="¿Recordar contraseña?"  />

                    <Switch
                        android:id="@+id/v04_swc_recordarcontrasenna_prs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5" />
                </LinearLayout>

                <TextView
                    android:id="@+id/v04_txv_olvidaste_contrasenna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="18sp"
                    android:text="@string/olvidaste_tu_contraseña"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/v04_ckb_condicioneslegales_prs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:text="@string/condicioneslegales_prs" />

                <Button
                    android:id="@+id/v04_btn_iniciar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/btn_formato_left"
                    android:text="@string/iniciar_sesion" />
            </LinearLayout>

            <Button
                android:id="@+id/v04_btn_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="-180dp"
                android:background="@drawable/btn_formato_left"
                android:text="@string/registrarse" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>